Added descriptions to item categories

--- a/src/pretix/control/templates/pretixcontrol/items/category.html
+++ b/src/pretix/control/templates/pretixcontrol/items/category.html
@@ -10,6 +10,7 @@
 		<fieldset>
 			<legend>{% trans "General information" %}</legend>
 			{% bootstrap_field form.name layout="horizontal" %}
+			{% bootstrap_field form.description layout="horizontal" %}
 		</fieldset>
 		<div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
