--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -56,7 +56,12 @@
             {% csrf_token %}
             {% for tup in items_by_category %}
                 <section>
-                    {% if tup.0 %}<h3>{{ tup.0.name }}</h3>{% endif %}
+                    {% if tup.0 %}
+                        <h3>{{ tup.0.name }}</h3>
+                        {% if tup.0.description %}
+                            <p>{{ tup.0.description }}</p>
+                        {% endif %}
+                    {% endif %}
                     {% for item in tup.1 %}
                         {% if item.has_variations %}
                             <div class="item-with-variations">
