--- a/src/pretix/presale/templates/pretixpresale/event/voucher.html
+++ b/src/pretix/presale/templates/pretixpresale/event/voucher.html
@@ -2,66 +2,23 @@
 {% load i18n %}
 {% load eventurl %}
 {% load thumbnail %}
-{% block title %}{% trans "Presale" %}{% endblock %}
+{% block title %}{% trans "Voucher redemption" %}{% endblock %}
 
 {% block content %}
-    {% if cart.positions %}
-        <div class="panel panel-primary cart">
-            <div class="panel-heading">
-                <h3 class="panel-title">{% trans "Your cart" %}</h3>
-            </div>
-            <div class="panel-body">
-                {% include "pretixpresale/event/fragment_cart.html" with cart=cart event=request.event editable=True %}
-                <div class="row-fluid">
-                    <div class="col-md-6 col-xs-12">
-                        {% if cart.minutes_left > 0 %}
-                            <em>{% blocktrans trimmed with minutes=cart.minutes_left %}
-                                The items in your cart are reserved for you for {{ minutes }} minutes.
-                            {% endblocktrans %}</em>
-                        {% else %}
-                            <em>{% trans "The items in your cart are no longer reserved for you." %}</em>
-                        {% endif %}
-                    </div>
-                    <div class="col-md-4 col-md-offset-2 col-xs-12">
-                        <a class="btn btn-block btn-primary btn-lg"
-                                href="{% eventurl request.event "presale:event.checkout.start" %}">
-                            <i class="fa fa-shopping-cart"></i> {% trans "Proceed with checkout" %}
-                        </a>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-            </div>
-        </div>
-    {% endif %}
-    {% if not event.presale_is_running %}
-        <div class="alert alert-info">
-            {% if event.presale_has_ended %}
-                {% blocktrans trimmed %}
-                    The presale period for this event is over.
-                {% endblocktrans %}
-            {% elif event.settings.presale_start_show_date %}
-                {% blocktrans trimmed with date=event.presale_start|date:"SHORT_DATE_FORMAT" time=event.presale_start|time:"TIME_FORMAT" %}
-                    The presale for this event will start on {{ date }} at {{ time }}.
-                {% endblocktrans %}
-            {% else %}
-                {% blocktrans trimmed %}
-                    The presale for this event has not yet started.
-                {% endblocktrans %}
-            {% endif %}
-        </div>
-    {% endif %}
+    <h2>{% trans "Voucher redemption" %}</h2>
+    <p>
+        {% blocktrans trimmed %}
+            You entered a voucher code that allows you to buy one of the following products at the specified price:
+        {% endblocktrans %}
+    </p>
     {% if event.presale_is_running or event.settings.show_items_outside_presale_period %}
         <form method="post" data-asynctask
                 action="{% eventurl request.event "presale:event.cart.add" %}?next={{ request.path|urlencode }}">
             {% csrf_token %}
+            <input type="hidden" name="_voucher_code" value="{{ voucher.code }}">
             {% for tup in items_by_category %}
                 <section>
-                    {% if tup.0 %}
-                        <h3>{{ tup.0.name }}</h3>
-                        {% if tup.0.description %}
-                            <p>{{ tup.0.description }}</p>
-                        {% endif %}
-                    {% endif %}
+                    {% if tup.0 %}<h3>{{ tup.0.name }}</h3>{% endif %}
                     {% for item in tup.1 %}
                         {% if item.has_variations %}
                             <div class="item-with-variations">
@@ -75,9 +32,7 @@
                                                         alt="{{ item.name }}"/>
                                             </a>
                                         {% endif %}
-                                        <a href="javascript:void(0);" data-toggle="variations">
-                                            <strong>{{ item.name }}</strong>
-                                        </a>
+                                        <strong>{{ item.name }}</strong>
                                         {% if item.description %}<p>{{ item.description }}</p>{% endif %}
                                     </div>
                                     <div class="col-md-2 col-xs-6 price">
@@ -90,20 +45,14 @@
                                         {% endif %}
                                     </div>
                                     <div class="col-md-2 col-xs-6 availability-box">
-                                        <a href="javascript:void(0);" data-toggle="variations" class="js-only">
-                                            {% trans "Show variants" %}
-                                        </a>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
-                                <div class="variations">
+                                <div class="">
                                     {% for var in item.available_variations %}
                                         <div class="row-fluid product-row variation">
                                             <div class="col-md-8 col-xs-12">
                                                 {{ var }}
-                                                {% if event.settings.show_quota_left %}
-                                                    {% include "pretixpresale/event/fragment_quota_left.html" with avail=var.cached_availability %}
-                                                {% endif %}
                                             </div>
                                             <div class="col-md-2 col-xs-6 price">
                                                 {% if item.free_price %}
@@ -125,10 +74,12 @@
                                                 {% endif %}
                                             </div>
                                             {% if var.cached_availability.0 == 100 %}
-                                                <div class="col-md-2 col-xs-6 availability-box available">
-                                                    <input type="number" class="form-control input-item-count" placeholder="0" min="0"
-                                                            max="{{ var.order_max }}"
-                                                            name="variation_{{ item.id }}_{{ var.id }}">
+                                                <div class="col-md-2 col-xs-6 availability-box available radio-box">
+                                                    <label>
+                                                        <input type="radio" name="_voucher_item"
+                                                                {% if options == 1 %}checked="checked"{% endif %}
+                                                                value="variation_{{ item.id }}_{{ var.id }}">
+                                                    </label>
                                                 </div>
                                             {% else %}
                                                 {% include "pretixpresale/event/fragment_availability.html" with avail=var.cached_availability.0 %}
@@ -152,9 +103,6 @@
                                     <strong>{{ item.name }}</strong>
                                     {% if item.description %}
                                         <p class="description">{{ item.description }}</p>{% endif %}
-                                    {% if event.settings.show_quota_left %}
-                                        {% include "pretixpresale/event/fragment_quota_left.html" with avail=item.cached_availability %}
-                                    {% endif %}
                                 </div>
                                 <div class="col-md-2 col-xs-6 price">
                                     {% if item.free_price %}
@@ -175,9 +123,12 @@
                                     {% endif %}
                                 </div>
                                 {% if item.cached_availability.0 == 100 %}
-                                    <div class="col-md-2 col-xs-6 availability-box available">
-                                        <input type="number" class="form-control input-item-count" placeholder="0" min="0"
-                                                max="{{ item.order_max }}" name="item_{{ item.id }}">
+                                    <div class="col-md-2 col-xs-6 availability-box available radio-box">
+                                        <label>
+                                            <input type="radio" name="_voucher_item"
+                                                    {% if options == 1 %}checked="checked"{% endif %}
+                                                    value="item_{{ item.id }}">
+                                        </label>
                                     </div>
                                 {% else %}
                                     {% include "pretixpresale/event/fragment_availability.html" with avail=item.cached_availability.0 %}
@@ -198,26 +149,6 @@
                     <div class="clearfix"></div>
                 </div>
             {% endif %}
-        </form>
-    {% endif %}
-    {% if vouchers_exist %}
-        <h2>{% trans "Redeem a voucher" %}</h2>
-        <form method="get" action="{% eventurl event "presale:event.redeem" %}">
-            <div class="row-fluid">
-                <div class="col-md-8 col-sm-6 col-xs-12">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-ticket fa-fw"></i></span>
-                        <input type="text" class="form-control" name="voucher" id="voucher"
-                                placeholder="{% trans "Voucher code" %}">
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <button class="btn btn-block btn-primary" type="submit">
-                        {% trans "Redeem voucher" %}
-                    </button>
-                </div>
-                <div class="clearfix"></div>
-            </div>
         </form>
     {% endif %}
 {% endblock %}
