--- a/src/pretix/control/templates/pretixcontrol/vouchers/index.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/index.html
@@ -4,45 +4,64 @@
 {% block inside %}
     <h1>{% trans "Vouchers" %}</h1>
     <p>
-        <a href="{% url "control:event.vouchers.add" organizer=request.event.organizer.slug event=request.event.slug %}"
-                class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create a new voucher" %}</a>
+        {% blocktrans trimmed %}
+            Vouchers allow you to assign tickets to specific persons for a lower price. They also enable you to
+            reserve some quota for your very special guests.
+        {% endblocktrans %}
     </p>
-    <div class="table-responsive">
-        <table class="table table-hover table-quotas">
-            <thead>
-            <tr>
-                <th>{% trans "Voucher code" %}</th>
-                <th>{% trans "Is redeemed" %}</th>
-                <th>{% trans "Expiry" %}</th>
-                <th>{% trans "Product" %}</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for v in vouchers %}
+    {% if vouchers|length == 0 %}
+        <div class="empty-collection">
+            <p>
+                {% blocktrans trimmed %}
+                    You haven't created any vouchers yet.
+                {% endblocktrans %}
+            </p>
+
+            <a href="{% url "control:event.vouchers.add" organizer=request.event.organizer.slug event=request.event.slug %}"
+                    class="btn btn-primary btn-lg"><i class="fa fa-plus"></i> {% trans "Create a new voucher" %}</a>
+        </div>
+    {% else %}
+        <p>
+            <a href="{% url "control:event.vouchers.add" organizer=request.event.organizer.slug event=request.event.slug %}"
+                    class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create a new voucher" %}</a>
+        </p>
+        <div class="table-responsive">
+            <table class="table table-hover table-quotas">
+                <thead>
                 <tr>
-                    <td>
-                        <strong><a href="
-                        {% url "control:event.voucher" organizer=request.event.organizer.slug event=request.event.slug voucher=v.id %}">{{ v.code }}</a></strong>
-                    </td>
-                    <td>{% if v.redeemed %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</td>
-                    <td>{{ v.valid_until|date }}</td>
-                    <td>
-                        {% if v.item %}
-                            {{ v.item }}
-                        {% else %}
-                            {% blocktrans trimmed with quota=v.quota.name %}
-                                Any product in quota "{{ quota }}"
-                            {% endblocktrans %}
-                        {% endif %}
-                    </td>
-                    <td class="text-right">
-                        <a href="{% url "control:event.voucher.delete" organizer=request.event.organizer.slug event=request.event.slug voucher=v.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
-                    </td>
+                    <th>{% trans "Voucher code" %}</th>
+                    <th>{% trans "Is redeemed" %}</th>
+                    <th>{% trans "Expiry" %}</th>
+                    <th>{% trans "Product" %}</th>
+                    <th></th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    {% include "pretixcontrol/pagination.html" %}
+                </thead>
+                <tbody>
+                {% for v in vouchers %}
+                    <tr>
+                        <td>
+                            <strong><a href="
+                        {% url "control:event.voucher" organizer=request.event.organizer.slug event=request.event.slug voucher=v.id %}">{{ v.code }}</a></strong>
+                        </td>
+                        <td>{% if v.redeemed %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</td>
+                        <td>{{ v.valid_until|date }}</td>
+                        <td>
+                            {% if v.item %}
+                                {{ v.item }}
+                            {% else %}
+                                {% blocktrans trimmed with quota=v.quota.name %}
+                                    Any product in quota "{{ quota }}"
+                                {% endblocktrans %}
+                            {% endif %}
+                        </td>
+                        <td class="text-right">
+                            <a href="{% url "control:event.voucher.delete" organizer=request.event.organizer.slug event=request.event.slug voucher=v.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% include "pretixcontrol/pagination.html" %}
+    {% endif %}
 {% endblock %}
