--- a/src/static/pretixcontrol/scss/main.scss
+++ b/src/static/pretixcontrol/scss/main.scss
@@ -164,3 +164,12 @@ h1 .btn-sm {
 .helper-space-below {
     margin-bottom: 10px;
 }
+
+.empty-collection {
+    margin: 20px 0;
+    text-align: center;
+
+    p {
+        font-size: 24px;
+    }
+}
