--- a/src/pretix/control/templates/pretixcontrol/items/quotas.html
+++ b/src/pretix/control/templates/pretixcontrol/items/quotas.html
@@ -2,13 +2,35 @@
 {% load i18n %}
 {% block title %}{% trans "Quotas" %}{% endblock %}
 {% block inside %}
-	<h1>{% trans "Quotas" %}</h1>
-	<p>
-		<a href="{% url "control:event.items.quotas.add" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create a new quota" %}</a>
-	</p>
-    <div class="table-responsive">
-        <table class="table table-hover table-quotas">
-            <thead>
+    <h1>{% trans "Quotas" %}</h1>
+    <p>
+        {% blocktrans trimmed %}
+            To make your products actually available, you also need quotas. Quotas define, how many instances of
+            your product pretix will sell. This way, you can configure whether your event can take an unlimited
+            number of attendees or the number of attendees is limited. You can assign a product to multiple quotas
+            to fulfil more complex requirements, e.g. if you want to limit the total number of tickets sold and the
+            number of a specific ticket type at the same time.
+        {% endblocktrans %}
+    </p>
+    {% if quotas|length == 0 %}
+        <div class="empty-collection">
+            <p>
+                {% blocktrans trimmed %}
+                    You haven't created any quotas yet.
+                {% endblocktrans %}
+            </p>
+
+            <a href="{% url "control:event.items.quotas.add" organizer=request.event.organizer.slug event=request.event.slug %}"
+                    class="btn btn-primary btn-lg"><i class="fa fa-plus"></i> {% trans "Create a new quota" %}</a>
+        </div>
+    {% else %}
+        <p>
+            <a href="{% url "control:event.items.quotas.add" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create a new quota" %}
+            </a>
+        </p>
+        <div class="table-responsive">
+            <table class="table table-hover table-quotas">
+                <thead>
                 <tr>
                     <th>{% trans "Quota name" %}</th>
                     <th>{% trans "Products" %}</th>
@@ -16,27 +38,32 @@
                     <th>{% trans "Capacity left" %}</th>
                     <th></th>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
                 {% for q in quotas %}
-                <tr>
-                    <td><strong><a href="{% url "control:event.items.quotas.edit" organizer=request.event.organizer.slug event=request.event.slug quota=q.id %}">{{ q.name }}</a></strong></td>
-                    <td>
-                        <ul>
-                            {% for item in q.items.all %}
-                                <li><a href="
+                    <tr>
+                        <td>
+                            <strong><a href="{% url "control:event.items.quotas.edit" organizer=request.event.organizer.slug event=request.event.slug quota=q.id %}">{{ q.name }}</a></strong>
+                        </td>
+                        <td>
+                            <ul>
+                                {% for item in q.items.all %}
+                                    <li><a href="
                                 {% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.id %}"
-                                        >{{ item.name }}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                    <td>{% if q.size == None %}Unlimited{% else %}{{ q.size }}{% endif %}</td>
-                    <td>{% include "pretixcontrol/items/fragment_quota_availability.html" with availability=q.availability %}</td>
-                    <td class="text-right"><a href="{% url "control:event.items.quotas.delete" organizer=request.event.organizer.slug event=request.event.slug quota=q.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a></td>
-                </tr>
+                                    >{{ item.name }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                        <td>{% if q.size == None %}Unlimited{% else %}{{ q.size }}{% endif %}</td>
+                        <td>{% include "pretixcontrol/items/fragment_quota_availability.html" with availability=q.availability %}</td>
+                        <td class="text-right">
+                            <a href="{% url "control:event.items.quotas.delete" organizer=request.event.organizer.slug event=request.event.slug quota=q.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                        </td>
+                    </tr>
                 {% endfor %}
-            </tbody>
-        </table>
-    </div>
+                </tbody>
+            </table>
+        </div>
+    {% endif %}
     {% include "pretixcontrol/pagination.html" %}
 {% endblock %}
