--- a/src/static/pretixcontrol/scss/main.scss
+++ b/src/static/pretixcontrol/scss/main.scss
@@ -7,6 +7,7 @@ $fa-font-path: static("fontawesome/fonts");
 @import "_forms.scss";
 @import "_flags.scss";
 @import "_orders.scss";
+@import "_dashboard.scss";
 
 footer {
     text-align: center;
@@ -81,79 +82,12 @@ h1 .btn-sm {
     -ms-transform: rotateX(180deg); /* IE 9 */
     -webkit-transform: rotateX(180deg); /* Safari and Chrome */
 }
-.dashboard-panels .panel-heading .fa {
-    opacity: 0.5;
-}
 @media (max-width: $screen-sm-max) {
     .navbar-nav {
         margin-left: 0;
     }
 }
 
-.dashboard > div {
-    padding: 5px;
-}
-.dashboard .widget {
-    min-height: 160px;
-    background: #F8F8F8;
-    display: block;
-    position: relative;
-}
-.dashboard .widget:hover,.dashboard .widget:focus {
-    background: #EEEEEE;
-    text-decoration: none;
-}
-.dashboard .numwidget {
-    .num {
-        display: block;
-        padding: 28px 0 10px;
-        text-align: center;
-        font-size: 40px;
-    }
-    .text {
-        display: block;
-        text-align: center;
-        font-size: 20px;
-    }
-}
-.dashboard .shopstate {
-    text-align: center;
-    padding: 36px 0;
-
-    span.live, span.off {
-        display: block;
-        font-size: 20px;
-        padding: 10px 0;
-    }
-    span.live {
-        color: $brand-success;
-    }
-    span.off {
-        color: $brand-danger;
-    }
-}
-.dashboard .event {
-    text-align: center;
-    padding: 30px;
-    font-size: 20px;
-
-    span.from, span.to {
-        display: block;
-        font-size: 25px;
-    }
-}
-.dashboard .newevent {
-    text-align: center;
-    padding: 30px;
-    font-size: 20px;
-
-    span.fa {
-        display: block;
-        font-size: 60px;
-        padding-bottom: 15px;
-    }
-
-}
 
 .helper-display-inline {
     display: inline !important;
