Redesign empty statistics page

--- a/src/static/pretixcontrol/scss/main.scss
+++ b/src/static/pretixcontrol/scss/main.scss
@@ -106,4 +106,9 @@ h1 .btn-sm {
     p {
         font-size: 24px;
     }
+
+    .big-grey-icon {
+        font-size: 200px;
+        color: #ccc;
+    }
 }
