Added "comments" and "tags" to vouchers

--- a/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
@@ -20,13 +20,21 @@
             {% bootstrap_field form.allow_ignore_quota layout="horizontal" %}
             {% bootstrap_field form.price layout="horizontal" %}
             {% bootstrap_field form.itemvar layout="horizontal" %}
-            <div class="alert alert-info">
-                {% blocktrans trimmed %}
-                    If you choose "any product" for a specific quota and choose to reserve quota for this
-                    voucher above, the product can still be unavailable to the voucher holder if another quota
-                    associated with the product is sold out!
-                {% endblocktrans %}
+            <div class="form-group">
+                <div class="col-md-9 col-md-offset-3">
+                    <div class="controls">
+                        <div class="alert alert-info">
+                            {% blocktrans trimmed %}
+                                If you choose "any product" for a specific quota and choose to reserve quota for this
+                                voucher above, the product can still be unavailable to the voucher holder if another quota
+                                associated with the product is sold out!
+                            {% endblocktrans %}
+                        </div>
+                    </div>
+                </div>
             </div>
+            {% bootstrap_field form.tag layout="horizontal" %}
+            {% bootstrap_field form.comment layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
