--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -28,6 +28,9 @@
                         <h4 class="panel-title">
                             <a data-toggle="collapse" href="#invoice" data-parent="#questions_accordion">
                                 <strong>{% trans "Invoice information" %}</strong>
+                                {% if not event.settings.invoice_address_required %}
+                                    {% trans "(optional)" %}
+                                {% endif %}
                             </a>
                         </h4>
                     </div>
