--- a/src/pretix/control/templates/pretixcontrol/auth/login.html
+++ b/src/pretix/control/templates/pretixcontrol/auth/login.html
@@ -9,19 +9,23 @@
         {% bootstrap_field form.email %}
         {% bootstrap_field form.password %}
         <div class="form-group buttons">
-            <a href="{% url "control:auth.forgot" %}" class="btn btn-link">
-                {% trans "Lost password?" %}
-            </a>
+            {% if can_reset %}
+                <a href="{% url "control:auth.forgot" %}" class="btn btn-link">
+                    {% trans "Lost password?" %}
+                </a>
+            {% endif %}
 
             <button type="submit" class="btn btn-primary">
                 {% trans "Log in" %}
             </button>
         </div>
 
-        <div class="form-group buttons">
-            <a href="{% url "control:auth.register" %}" class="btn btn-link">
-                {% trans "Register" %}
-            </a>
-        </div>
+        {% if can_register %}
+            <div class="form-group buttons">
+                <a href="{% url "control:auth.register" %}" class="btn btn-link">
+                    {% trans "Register" %}
+                </a>
+            </div>
+        {% endif %}
     </form>
 {% endblock %}
