--- a/src/pretix/base/templates/pretixbase/cachedfiles/pending.html
+++ b/src/pretix/base/templates/pretixbase/cachedfiles/pending.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="{% static "pretixbase/js/reloadpending.js" %}"></script>
     {% endcompress %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="refresh" content="1">
 </head>
 <body>
 <div class="container">
