--- a/src/pretix/base/templates/pretixbase/cachedfiles/pending.html
+++ b/src/pretix/base/templates/pretixbase/cachedfiles/pending.html
@@ -20,7 +20,7 @@
     <i class="fa fa-cog big-animated-icon"></i>
     <h1>{% trans "We are preparing your file for download…" %}</h1>
     <p>
-        {% trans "If this takes longer than a few minutes, please contact us." %}
+        {% trans "If this takes longer than a few minutes, please refresh this page or contact us." %}
     </p>
 </div>
 </body>
