--- a/src/static/pretixcontrol/scss/_forms.scss
+++ b/src/static/pretixcontrol/scss/_forms.scss
@@ -114,3 +114,6 @@ div[data-formset-body], div[data-formset-form], div[data-nested-formset-form], d
     }
   }
 }
+.ticketoutput-panel .panel-title {
+  line-height: 30px;
+}
