Added hook for links in the footer

--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -58,4 +58,8 @@
         <a href="{{ request.event.settings.imprint_url }}" target="_blank">{% trans "Imprint" %}</a>
         &middot;
     {% endif %}
+    {% for f in footer %}
+        <a href="{{ f.url }}" target="_blank">{{ f.label }}</a>
+        &middot;
+    {% endfor %}
 {% endblock %}
