Fixed #147 -- Order filter form does not represent current state

--- a/src/pretix/control/templates/pretixcontrol/orders/index.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/index.html
@@ -47,7 +47,7 @@
                 <option value="">{% trans "All products" %}</option>
                 {% for item in items %}
                     <option value="{{ item.id }}"
-                            {% if request.GET.item == item.id %}selected="selected"{% endif %}>
+                            {% if request.GET.item|add:"0" == item.id %}selected="selected"{% endif %}>
                         {{ item.name }}
                     </option>
                 {% endfor %}
