--- a/src/pretix/base/templates/403.html
+++ b/src/pretix/base/templates/403.html
@@ -6,7 +6,7 @@
     <h1>{% trans "Permission denied" %}</h1>
     <p>{% trans "You do not have access to this page." %}</p>
     <p>{{ exception }}</p>
-    <p>
+    <p class="links">
         <a href="javascript:history.back()">{% trans "Take a step back" %}</a>
         &middot; <a href="javascript:location.reload()">{% trans "Try again" %}</a>
     </p>
