--- a/src/pretix/base/templates/404.html
+++ b/src/pretix/base/templates/404.html
@@ -6,7 +6,7 @@
     <h1>{% trans "Not found" %}</h1>
     <p>{% trans "I'm afraid we could not find the the resource you requested." %}</p>
     <p>{{ exception }}</p>
-    <p>
+    <p class="links">
         <a href="javascript:history.back()">{% trans "Take a step back" %}</a>
     </p>
 {% endblock %}
