--- a/src/pretix/base/templates/csrffail.html
+++ b/src/pretix/base/templates/csrffail.html
@@ -18,7 +18,7 @@
             Please go back to the last page, refresh this page and then try again. If the problem persists, please get in touch with us.
         {% endblocktrans %}</p>
     {% endif %}
-    <p>
+    <p class="links">
         <a href="javascript:history.back()">{% trans "Take a step back" %}</a>
     </p>
 {% endblock %}
