--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -37,6 +37,8 @@
         {% endblocktrans %}
     {% endwith %}
 </footer>
+<div id="ajaxerr">
+</div>
 <div id="loadingmodal">
     <i class="fa fa-cog big-rotating-icon"></i>
     <h1>{% trans "We are processing your request…" %}</h1>
