--- a/src/pretix/base/templates/500.html
+++ b/src/pretix/base/templates/500.html
@@ -7,7 +7,7 @@
     <p>{% trans "We had trouble processing your request." %}</p>
     <p>{% trans "If this problem persists, please contact us." %}</p>
     <p>{{ exception }}</p>
-    <p>
+    <p class="links">
         <a href="javascript:history.back()">{% trans "Take a step back" %}</a>
         &middot; <a href="javascript:location.reload()">{% trans "Try again" %}</a>
     </p>
