--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -29,11 +29,9 @@
             {% if request.event.settings.locales|length > 1 %}
                 <div class="locales">
                     {% for l in request.event.settings.locales %}
-                        {% if l != request.LANGUAGE_CODE %}
-                            <a href="{% url "presale:locale.set" %}?locale={{ l }}&next={{ request.path }}%3F{{ request.META.QUERY_STRING|urlencode }}">
-                                <img src="{% static "pretixbase/img/flags" %}/{{ l }}.png"/>
-                            </a>
-                        {% endif %}
+                        <a href="{% url "presale:locale.set" %}?locale={{ l }}&next={{ request.path }}%3F{{ request.META.QUERY_STRING|urlencode }}"
+                            class="{% if l == request.LANGUAGE_CODE %}active{% endif %}"
+                            ><img src="{% static "pretixbase/img/flags" %}/{{ l }}.png"/></a>
                     {% endfor %}
                 </div>
             {% endif %}
